# orbit

./: .editorconfig  .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  README.md  commitlint.config.mjs  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.base.json  turbo.json
.claude/: README.md  settings.json
.claude/agents/: phase-guard.md  rust-reviewer.md  ts-strict-checker.md
.claude/commands/: adr.md  check.md  lint.md  tauri-dev.md  test.md  typecheck.md
.github/: dependabot.yml
.github/workflows/: ci.yml  gitleaks.yml  release.yml  security.yml
.husky/: post-checkout  post-commit
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/migrations/: 0003_identity.sql  0004_inter_agent_messages.sql  0005_teams.sql  0006_git_isolation.sql  0007_tasks_sticky_notes.sql  0008_groups_mcp.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs  terminal.rs
apps/desktop/src-tauri/src/agents/: claude_code.rs  engine.rs  extract.rs  mod.rs  prompt_builder.rs  remember.rs  stream_json.rs  supervisor.rs  turn.rs
apps/desktop/src-tauri/src/broker/: mod.rs
apps/desktop/src-tauri/src/core/: mod.rs
apps/desktop/src-tauri/src/db/: mod.rs  models.rs  queries.rs
apps/desktop/src-tauri/src/git/: mod.rs
apps/desktop/src-tauri/src/ipc/: commands.rs  events.rs  mod.rs
docs/: architecture.md  phases.md
docs/decisions/: 0001-tauri-over-electron.md  0002-claude-code-as-engine.md  (+8 more)
graphify-out/: GRAPH_REPORT.md  graph.json
(+55 files in other folders)
